--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,19 +9,20 @@ set -g prefix C-space
 unbind C-b
 bind C-space send-prefix
 
-set -g status-bg green
-set -g status-fg black
+set -g status-bg black
+set -g status-fg brightgreen
 
-set -g status-left " "
-set -g status-right "#[fg=black]#S "
-set -g window-status-format " #I:#W "
-set -g window-status-style 'bg=green,fg=black'
-set -g window-status-current-format " #I:#W "
-set -g window-status-current-style 'bg=white,fg=black'
+set -g status-left ""
+set -g status-right "[#S] %H:%M"
+set -g window-status-format "#I:#W"
+set -g window-status-style 'bg=black,fg=brightgreen'
+set -g window-status-current-format "[#I:#W]"
+set -g window-status-current-style 'bg=black,fg=brightgreen'
 
 
 %if #{TMUX}
-set -g status-bg red
+set -g status-bg black
+set -g status-fg brightred
 %endif
 
 set-option -sa terminal-overrides ",xterm*:Tc"
